--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -2,7 +2,7 @@
   .chat-main__header
     .chat-main__header__left-contents
       %p.chat-main__header__left-contents__groupname test
-      %p.chat-main__header__left-contents__menber Menber: masa
+      %p.chat-main__header__left-contents__menber= "Menber: #{current_user.name}"
     .chat-main__header__right-contents
       = link_to 'Edit', '#', class: 'chat-main__header__right-contents__edit'
   .chat-main__main
