--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,7 +1,7 @@
 .side-bar
   .side-bar__header
     .side-bar__header__center-box
-      = link_to "masa", "#", class: "username"
+      = link_to current_user.name, "#", class: "username"
       .side-bar__header__center-box__icons
         = link_to "#" do
           = icon('far', 'edit', class: 'icon')
