fix_side_bar.html.haml

--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,7 +1,7 @@
 .side-bar
   .side-bar__header
     .side-bar__header__center-box
-      = link_to current_user.name, "#", class: "username"
+      #a.username= current_user.name
       .side-bar__header__center-box__icons
         = link_to "#" do
           = icon('far', 'edit', class: 'icon')
@@ -10,8 +10,10 @@
           = icon('fa', 'cog', class: 'icon')
   .side-bar__groupname
     .side-bar__groupname__boxes
-      %p.side-bar__groupname__boxes__tag techcamp
-      %p.side-bar__groupname__boxes__message まだメッセージがありません
+      = link_to "#" do
+        %p.side-bar__groupname__boxes__tag techcamp
+        %p.side-bar__groupname__boxes__message まだメッセージがありません
     .side-bar__groupname__boxes
-      %p.side-bar__groupname__boxes__tag techcamp
-      %p.side-bar__groupname__boxes__message まだメッセージがありません
+      = link_to "#" do
+        %p.side-bar__groupname__boxes__tag techcamp
+        %p.side-bar__groupname__boxes__message まだメッセージがありません
