add_link_to_user_edit_side_bar

--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -6,7 +6,7 @@
         = link_to "#" do
           = icon('far', 'edit', class: 'icon')
           %span<>
-        = link_to "#" do
+        = link_to edit_user_path(current_user.id) do
           = icon('fa', 'cog', class: 'icon')
   .side-bar__groupname
     .side-bar__groupname__boxes
