--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -3,7 +3,7 @@
     .side-bar__header__center-box
       #a.username= current_user.name
       .side-bar__header__center-box__icons
-        = link_to "#" do
+        = link_to new_group_path do
           = icon('far', 'edit', class: 'icon')
           %span<>
         = link_to edit_user_path(current_user.id) do
