--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -10,10 +10,7 @@
           = icon('fa', 'cog', class: 'icon')
   .side-bar__groupname
     .side-bar__groupname__boxes
-      = link_to "#" do
-        %p.side-bar__groupname__boxes__tag techcamp
-        %p.side-bar__groupname__boxes__message まだメッセージがありません
-    .side-bar__groupname__boxes
-      = link_to "#" do
-        %p.side-bar__groupname__boxes__tag techcamp
-        %p.side-bar__groupname__boxes__message まだメッセージがありません
+      - current_user.groups.each do |group|
+        = link_to "#" do
+          %p.side-bar__groupname__boxes__tag= group.name
+          %p.side-bar__groupname__boxes__message まだメッセージがありません
