--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -11,6 +11,6 @@
   .side-bar__groupname
     .side-bar__groupname__boxes
       - current_user.groups.each do |group|
-        = link_to "#" do
+        = link_to group_messages_path(group.id) do
           %p.side-bar__groupname__boxes__tag= group.name
           %p.side-bar__groupname__boxes__message まだメッセージがありません
