--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -50,6 +50,7 @@ $WhiteColor: #ffffff;
     background-color: #2f3e51;
     height: calc(100vh - 100px);
     width: 300px;
+    overflow-y: auto;
     &__boxes__tag {
       font-size: 15px;
       padding: 20px 20px 5px 20px;
@@ -107,6 +108,7 @@ $WhiteColor: #ffffff;
     height: calc(100vh - 100px - 90px);
     width: calc(100vw - 300px);
     padding-top: 35px;
+    overflow-y: auto;
     &__contents {
       margin: 0 0 46px 40px;
       &__user{
