--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -51,15 +51,23 @@ $WhiteColor: #ffffff;
     height: calc(100vh - 100px);
     width: 300px;
     overflow-y: auto;
-    &__boxes__tag {
-      font-size: 15px;
-      padding: 20px 20px 5px 20px;
-      color: $WhiteColor;
-    }
-    &__boxes__message {
-      font-size: 11px;
-      padding: 0 20px 40px;
-      color: $WhiteColor;
+    &__boxes{
+      height: 91px;
+      &__tag {
+        font-size: 15px;
+        padding: 20px 20px 5px 20px;
+        color: $WhiteColor;
+        display: block;
+        text-decoration: none;
+      }
+      &__message {
+        font-size: 11px;
+        padding: 0 20px 0;
+        color: $WhiteColor;
+        display: block;
+        text-decoration: none;
+        margin-bottom: 40px;
+      }
     }
   }
 }
