--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -5,24 +5,21 @@
       %p.chat-main__header__left-contents__menber= "Menber: #{current_user.name}"
     .chat-main__header__right-contents
       = link_to 'Edit', '#', class: 'chat-main__header__right-contents__edit'
+
   .chat-main__main
-    .chat-main__main__contents
-      .chat-main__main__contents__user
-        %a.chat-main__main__contents__user__name fff
-        %a.chat-main__main__contents__user__date 2020/05/26(Tue) 14:43:26
-      .chat-main__main__contents__message
-        %a test
-    .chat-main__main__contents
-      .chat-main__main__contents__user
-        %a.chat-main__main__contents__user__name fff
-        %a.chat-main__main__contents__user__date 2020/05/26(Tue) 14:43:26
-      .chat-main__main__contents__message
-        %a test
+    - @messages.each do |message|
+      .chat-main__main__contents
+        .chat-main__main__contents__user
+          %a.chat-main__main__contents__user__name= message.user.name
+          %a.chat-main__main__contents__user__date= message.created_at.strftime("%Y年%m月%d日 %H時%M分")
+        .chat-main__main__contents__message 
+          %a= message.text if message.text.present?
+          = image_tag message.picture.url if message.picture.present?
   .chat-main__type-message
-    = form_for '#' do |f|
+    = form_for [@group, @message] do |f|
       .chat-main__type-message__form
-        = f.text_field :content, placeholder: 'type a message', class: 'chat-main__type-message__form__text'
+        = f.text_field :text, placeholder: 'type a message', class: 'chat-main__type-message__form__text'
         %label
           = icon('far', 'image', class: 'chat-main__type-message__form__icon')
-          = f.file_field :upload_file, class: 'chat-main__type-message__form__file'
+          = f.file_field :picture, class: 'chat-main__type-message__form__file'
       = f.submit 'Send', class: 'chat-main__type-message__btn'
