--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -10,7 +10,7 @@
 
   .chat-main__main
     - @messages.each do |message|
-      .chat-main__main__contents
+      .chat-main__main__contents{data: {message: {id: message.id}}} 
         .chat-main__main__contents__user
           %a.chat-main__main__contents__user__name= message.user.name
           %a.chat-main__main__contents__user__date= message.created_at.strftime("%Y年%m月%d日 %H時%M分")
