--- a/app/assets/stylesheets/modules/user.scss
+++ b/app/assets/stylesheets/modules/user.scss
@@ -24,6 +24,7 @@
       letter-spacing: 3px;
       font-size: 40px;
       font-weight: 200;
+      color: black;
 
       &:after {
         content: '';
@@ -45,6 +46,7 @@
       color: #fff;
       background-color: #ccc;
       font-size: 14px;
+      text-decoration: none;
     }
   }
 
